--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Validate Red Hat Data
         env:
           ALLOW_FILE_BASED_URL: true
-          REPO_URL: file://${GITHUB_WORKSPACE}
+          REPO_URL: file://${{github.workspace}}/
           REPO_KEY: |
             -----BEGIN PUBLIC KEY-----
             MIICIjANBgkqhkiG9w0BAQEFAAOCAg8AMIICCgKCAgEAoWlAyGsyYfaE42vvMjr0
