--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,3 +1,10 @@
+name: Validate Red Hat marketplace data
+
+on:
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
+
 jobs:
   call-adoptium-verifier:
     uses: adoptium/marketplace-data/.github/workflows/validate-data.yml@main
